--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,18 +1,49 @@
-/*  NAVBAR -- BOOTSTRAP --- CUSTON */
+/*  NAVBAR -- BOOTSTRAP --- CUSTOM */
 
-.navbar-light .navbar-toggler-icon{ /* Toggler */ 
+/* Toggler icon styling for the Bootstrap navbar */
+.navbar-light .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
+/* FORM FIRST NAVIGATION */
+/* Styling for the search icon on hover */
 .search-icon:hover {
     cursor: pointer;
+    background-color: #808080;
 }
-/* Estilos padrão para telas menores que 600 pixels */
+
+/* Animation for the search icon on hover */
+.search-icon:hover svg {
+    animation: pulse 0.5s ease-in-out;
+}
+
+/* Keyframes for the pulse animation */
+@keyframes pulse {
+    0% {
+        transform: scale(1) rotate(0deg);
+    }
+    25% {
+        transform: scale(1.1) rotate(90deg);
+    }
+    50% {
+        transform: scale(1.2) rotate(180deg);
+    }
+    75% {
+        transform: scale(1.1) rotate(270deg);
+    }
+    100% {
+        transform: scale(1) rotate(360deg);
+    }
+}
+/* FORM FIRST NAVIGATION */
+
+
+/* Default styles for screens smaller than 600 pixels */
 .search-input-container {
     width: 90vw;
 }
 
-/* Estilos para telas maiores que 600 pixels */
+/* Styles for screens larger than 600 pixels */
 @media (min-width: 600px) {
     .search-input-container {
         width: 80vw;
@@ -20,13 +51,14 @@
     }
 }
 
-/* Estilos para telas maiores que 800 pixels */
+/* Styles for screens larger than 800 pixels */
 @media (min-width: 800px) {
     .search-input-container {
         width: 60vw;
         margin-left: 5vw;
     }
 }
+
 
 
 
