--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,17 +13,17 @@
 </head>
 <body>
     <!-- First navbar -->
-    <nav class="navbar navbar-expand-md navbar-light bg-dark">
+    <nav class="navbar navbar-expand-md navbar-light bg-dark ">
         <div class="container-xxl">
             <!-- Navigation content -->
             <div class="d-flex align-items-center justify-content-between">
                 <!-- Seu Logo -->
-                <a href="#intro" class="navbar-brand">
+                <a href="/" class="navbar-brand">
                     <img class="img-fluid d-md-inline" src="/static/assets/favicon/favicon.png" alt="Logo" style="width: 64px; height: 64px;">
                 </a>
             
                 <!-- Seu Slogan -->
-                <span class="fw-bold text-primary d-md-inline d-none text-white me-3" style="margin-right: 20px;">
+                <span id="slogan" class="fw-bold text-primary d-md-inline d-none text-white me-3" >
                     ClickTips
                     <small class="text-muted">Unlocking Memorys with a Click!</small>
                 </span>
@@ -56,7 +56,7 @@
             <div class="navbar-nav ms-auto">
                 <ul class="navbar-nav ">
                     <li class="nav-item ">
-                        <a  class="fw-bold text-primary text-decoration-none d-md-inline d-none text-white me-3 " href="#login">Login</a>
+                        <a  class="fw-bold text-primary text-decoration-none d-md-inline d-none text-white me-3 " href="/login">Login</a>
                     </li>
                     <li class="nav-item">
                         <a  class="fw-bold text-primary text-decoration-none d-md-inline d-none text-white me-3" id="register" href="#register">Register</a>
@@ -69,10 +69,10 @@
 
 
 <!--   SEGUNDA NAVIGATION -->
-<nav class="navbar navbar-expand-md navbar-dark bg-primary navbar-custom border-3">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary navbar-custom border-3 mb-4">
     <div class="container-xxl">
         <!-- Navbar links -->
-        <div class="collapse navbar-collapse justify-content-start navbar-sm" 
+        <div class=" collapse navbar-collapse justify-content-start navbar-sm" 
         id="main-nav">
             <ul class="navbar-nav">
                 <li class="nav-item me-5">
@@ -93,7 +93,7 @@
                         Notification</a>
                 </li>
                 <!---->
-                <li class="nav-item ms-md-2 me-md-4 d-md-inline ">
+                <li class="nav-item ms-md-2 me-md-3 d-md-inline" >
                     <button class="btn btn-light text-secondary btn-outline d-none d-sm-inline" id="announceBtn" href="#topics">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-upload"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" y1="3" x2="12" y2="15"/></svg>
                         Announce
@@ -105,7 +105,7 @@
 
                 <!-- Login e Register movidos para a segunda navegação -->
                 <li class="nav-item d-md-none">
-                    <a class="nav-link text-white" href="#" id="loginMobile">
+                    <a class="nav-link text-white" href="/login" id="loginMobile">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-in"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/><polyline points="10 17 15 12 10 7"/><line x1="15" y1="12" x2="3" y2="12"/></svg>
                         Login</a>
                 </li>
@@ -150,10 +150,14 @@
     </div>
 </nav>
  
+<main class="container-xxl py-5 mb-4 mt-5 " style="background-color: red;">
+    {% block main %}{% endblock %}
+</main>
+
 </body>
 
 <!-- Main.js-->
-<script src="/js/main.js"></script>
+<script src="static/js/main.js"></script>
 <!--Bootstrap 5-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
