--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -66,7 +66,19 @@ main {
     width: 90vw;
 }
 
+/*------- REGISTER PAGE-------*/
+#registerform-cardHeader, #nav-container{
+    background-color: rgba(23, 7, 247, 0.7) !important;
+}
 
+.bg-white:active {
+    background-color: #768390!important;
+}
+
+.custon-cardBodyLogin, .button-register {
+    font-family: Arial, Helvetica, sans-serif;
+}
+/*------- REGISTER PAGE ENDS - */
 /* Styles for screens larger than 600 pixels */
 @media (min-width: 600px) {
 
