--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- ANIMATIONS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!-- CSS BOOTSTRAP 5-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Custon CSS-->
@@ -59,7 +61,7 @@
                         <a  class="fw-bold text-primary text-decoration-none d-md-inline d-none text-white me-3 " href="/login">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a  class="fw-bold text-primary text-decoration-none d-md-inline d-none text-white me-3" id="register" href="#register">Register</a>
+                        <a  class="fw-bold text-primary text-decoration-none d-md-inline d-none text-white me-3" id="register" href="/register">Register</a>
                     </li>
                 </ul>
             </div>
@@ -69,7 +71,7 @@
 
 
 <!--   SEGUNDA NAVIGATION -->
-<nav class="navbar navbar-expand-md navbar-dark bg-primary navbar-custom border-3 mb-4">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary navbar-custom border-3 mb-4" id="nav-container">
     <div class="container-xxl">
         <!-- Navbar links -->
         <div class=" collapse navbar-collapse justify-content-start navbar-sm" 
@@ -93,12 +95,12 @@
                         Notification</a>
                 </li>
                 <!---->
-                <li class="nav-item ms-md-2 me-md-3 d-md-inline" >
-                    <button class="btn btn-light text-secondary btn-outline d-none d-sm-inline" id="announceBtn" href="#topics">
+                <li class="nav-item ms-md-2 me-md-3 d-md-inline" id="button-register" >
+                    <button  class="btn btn-light text-secondary btn-outline d-none d-sm-inline" id="announceBtn" href="#topics">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-upload"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" y1="3" x2="12" y2="15"/></svg>
                         Announce
                     </button>
-                    <a class="nav-link text-white d-sm-none" href="#topics">
+                    <a class="nav-link text-white d-sm-none"  href="#topics">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-upload"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" y1="3" x2="12" y2="15"/></svg>
                         Announce</a>
                 </li>
@@ -110,7 +112,7 @@
                         Login</a>
                 </li>
                 <li class="nav-item d-md-none">
-                    <a class="nav-link text-white" href="#" id="registerMobile">
+                    <a class="nav-link text-white" href="/register" id="registerMobile">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-key"><path d="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4"/></svg>
                         Sign-Up</a>
                 </li>
@@ -150,7 +152,7 @@
     </div>
 </nav>
  
-<main class="container-xxl py-5 mb-4 mt-5 " style="background-color: red;">
+<main class="container-xxl py-5 mb-4 mt-5 " >
     {% block main %}{% endblock %}
 </main>
 
