--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,8 +32,8 @@
     
                 <!-- Search form -->
                 <form class="d-flex mx-auto">
-                    <div class="input-group search-input-container" style="width:50vw;">
-                        <input class="form-control search-input" type="search" placeholder="Search in Clicktips.com" aria-label="Search">
+                    <div class="input-group search-input-container" style="width:47vw;">
+                        <input id="search-nav" class="form-control search-input" type="search" placeholder="Search in Clicktips.com" aria-label="Search">
                         <span class="input-group-text search-icon">
                             <button type="submit" class="btn search-button">
                             <!-- Conteúdo SVG da lupa -->
@@ -56,6 +56,16 @@
     
             <!--   Login section -->
             <div class="navbar-nav ms-auto">
+                {% if session["user_id"] %}
+                <ul class="navbar-nav ">
+                    <li class="nav-item ">
+                        <a  class="fw-bold text-primary text-decoration-none d-md-inline d-none text-white me-3 " href="#">{{display_username}}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a  class="fw-bold text-primary text-decoration-none d-md-inline d-none text-white me-3" id="register" href="/logout">Logout</a>
+                    </li>
+                </ul>
+                {% else %}
                 <ul class="navbar-nav ">
                     <li class="nav-item ">
                         <a  class="fw-bold text-primary text-decoration-none d-md-inline d-none text-white me-3 " href="/login">Login</a>
@@ -64,6 +74,7 @@
                         <a  class="fw-bold text-primary text-decoration-none d-md-inline d-none text-white me-3" id="register" href="/register">Register</a>
                     </li>
                 </ul>
+                {% endif %}
             </div>
         </div>
         <!--  End of nav content-->
@@ -78,34 +89,46 @@
         id="main-nav">
             <ul class="navbar-nav">
                 <li class="nav-item me-5">
-                    <a  class="nav-link text-light" href="#topics">
+                    <a  class="nav-link text-light" href="/myads">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-grid"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/></svg>                  
                         My Ads</a>
                 </li>
                 <!---->
                 <li class="nav-item me-5">
-                    <a  class="nav-link text-white " href="#topics">
+                    <a  class="nav-link text-white " href="/chat">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-circle"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
                         Chat</a>
                 </li>
                 <!---->
                 <li class="nav-item me-5">
-                    <a  class="nav-link text-white" href="#topics">
+                    <a  class="nav-link text-white" href="/notification">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"/><path d="M13.73 21a2 2 0 0 1-3.46 0"/></svg>
                         Notification</a>
                 </li>
                 <!---->
                 <li class="nav-item ms-md-2 me-md-3 d-md-inline" id="button-register" >
-                    <button  class="btn btn-light text-secondary btn-outline d-none d-sm-inline" id="announceBtn" href="#topics">
+                    <button  class="btn btn-light text-secondary btn-outline d-none d-sm-inline" id="announceBtn" href="/announce">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-upload"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" y1="3" x2="12" y2="15"/></svg>
                         Announce
                     </button>
-                    <a class="nav-link text-white d-sm-none"  href="#topics">
+                    <a class="nav-link text-white d-sm-none"  href="/announce">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-upload"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" y1="3" x2="12" y2="15"/></svg>
                         Announce</a>
                 </li>
 
                 <!-- Login e Register movidos para a segunda navegação -->
+                {% if session["user_id"] %}
+                <li class="nav-item d-md-none">
+                    <a class="nav-link text-white" href="#" id="loginMobile">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-in"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/><polyline points="10 17 15 12 10 7"/><line x1="15" y1="12" x2="3" y2="12"/></svg>
+                        {{display_username}}</a>
+                </li>
+                <li class="nav-item d-md-none">
+                    <a class="nav-link text-white" href="/logout" id="registerMobile">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-key"><path d="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4"/></svg>
+                        Logout</a>
+                </li>
+                {% else %}
                 <li class="nav-item d-md-none">
                     <a class="nav-link text-white" href="/login" id="loginMobile">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-in"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/><polyline points="10 17 15 12 10 7"/><line x1="15" y1="12" x2="3" y2="12"/></svg>
@@ -116,6 +139,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-key"><path d="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4"/></svg>
                         Sign-Up</a>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </div>
@@ -152,7 +176,14 @@
     </div>
 </nav>
  
-<main class="container-xxl py-5 mb-4 mt-5 " >
+<main class="container-xxl  py-5 mb-4 mt-5 " >
+            {% if get_flashed_messages() %}
+            <header>
+                <div class="alert alert-primary mb-0 text-center" role="alert">
+                    {{ get_flashed_messages() | join(" ") }}
+                </div>
+            </header>
+        {% endif %}
     {% block main %}{% endblock %}
 </main>
 
