--- a/templates/login.html
+++ b/templates/login.html
@@ -49,7 +49,7 @@
                         <!---->
                         <div class="form-group pt-2 ">
                             <label for="username" class="text-white">Username:</label>
-                            <input type="text" class="form-control" id="username" name="username" placeholder="Example: Jon" required>
+                            <input type="text" class="form-control" id="username" name="username" placeholder="Example: Jon" autocomplete="username" required>
                         </div>
                         <!---->
                         <div class="form-group pt-2">
