--- a/templates/register.html
+++ b/templates/register.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <!-- Card-Body-->
-                <div class="card-body custon-cardBodyLogin" id="registerform-cardHeader">
+                <div class="card-body custon-cardBodyLogin" id="custon-cardHeader">
                     <form class="form" role="form" autocomplete="off" method="POST" action="/register">
                         <!---->
                         <div class="form-group pt-2">
