--- a/templates/layout.html
+++ b/templates/layout.html
@@ -106,12 +106,12 @@
                         Notification</a>
                 </li>
                 <!---->
-                <li class="nav-item ms-md-2 me-md-3 d-md-inline" id="button-register" >
-                    <button  class="btn btn-light text-secondary btn-outline d-none d-sm-inline" id="announceBtn" href="/announce">
+                <li class="nav-item ms-md-2 me-md-3 d-md-inline" >
+                    <button  class="btn btn-light text-secondary btn-outline d-none d-sm-inline" id="announceBtn" >
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-upload"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" y1="3" x2="12" y2="15"/></svg>
                         Announce
                     </button>
-                    <a class="nav-link text-white d-sm-none"  href="/announce">
+                    <a class="nav-link text-white d-sm-none" href="/announce"  >
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-upload"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" y1="3" x2="12" y2="15"/></svg>
                         Announce</a>
                 </li>
