Page announce card done, wrong name (index) pre-branch

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -77,7 +77,7 @@
                 {% endif %}
             </div>
         </div>
-        <!--  End of nav content-->
+        <!--  End of nav content working with git-->
     </nav>
 
 
