--- a/templates/register.html
+++ b/templates/register.html
@@ -35,7 +35,7 @@
     <div class="row justify-content-center">
         <div class="col-md-5 shadow-lg rounded p-4 mb-4">
             <div class="card">
-                <!-- Header-->
+                <!-- Header working with git-->
                 <div class="card-header bg-dark text-center">
                     <div class="d-flex flex-column align-items-center">
                         <a href="/">
