--- a/templates/announce.html
+++ b/templates/announce.html
@@ -5,7 +5,13 @@
 {% endblock %}
 
 {% block main %}
+
 <div class="container-xxl d-flex flex-column pt-4">
+    {% if error %}
+    <div class="alert alert-danger text-center" role="alert">
+        {{ error }}
+    </div>
+    {% endif %}
     <div class="row justify-content-center">
         <div class="col-md-5 shadow-lg rounded p-4 mb-4">
             <div class="card">
