--- a/templates/register.html
+++ b/templates/register.html
@@ -31,7 +31,11 @@
     </script>
 
 <div class="container-xxl d-flex flex-column">
-
+    {% if error %}
+    <div class="alert alert-danger text-center" role="alert">
+        {{ error }}
+    </div>
+    {% endif %}
     <div class="row justify-content-center">
         <div class="col-md-5 shadow-lg rounded p-4 mb-4">
             <div class="card">
