--- a/templates/register.html
+++ b/templates/register.html
@@ -69,6 +69,11 @@
                             <label for="password" class="text-white">Password * 
                                 <small class="text-dark m-2 "> Use letters, numbers and special characters.</small></label>
                             <input type="password" class="form-control" id="password" name="password" required>
+                            <div class="col-auto">
+                                <span id="passwordHelpInline" class="form-text">
+                                  Must be 8 characters long.
+                                </span>
+                            </div>
                         </div>
                         <!---->
                         <div class="form-group pt-2">
